# TriCache

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
ae-plot-scripts/: calc_breakdown.py  calc_small.py  common.py  draw_graph_processing.py  draw_heatmap.py  draw_livegraph.py  draw_rocksdb.py  draw_terasort.py
bench/: bench_cached_vector.cpp  bench_compact_hash_page_table.cpp  bench_hitrate.cpp  bench_hitrate_fastmap.cpp  bench_hitrate_mmap.cpp  bench_io.cpp  bench_partition_server_client.cpp  bench_private_cache.cpp  bench_shared_cache.cpp  bench_single_thread_cache.cpp  bench_terasort_gnu.cpp  bench_terasort_manual.cpp
bind/: cache.cpp  cache.h  hook.cpp  segfault_handler.cpp
cmake/: Findaio.cmake  Findnuma.cmake  Finduring.cmake
include/: access_counter.hpp  cached_allocator.hpp  cached_ptr.hpp  compact_hash_page_table.hpp  direct_cache.hpp  integrated_cache.hpp  io_backend.hpp  memory_pool.hpp  mmap_allocator.hpp  page_table.hpp  partition_client.hpp  partition_server.hpp  partition_type.hpp  partitioner.hpp  private_cache.hpp  replacement.hpp  shared_cache.hpp  shared_single_thread_cache.hpp  single_thread_cache.hpp  type.hpp  util.hpp
llvm-plugin/: CMakeLists.txt
llvm-plugin/TriCacheAlloc/: CMakeLists.txt  TriCacheAlloc.cpp
llvm-plugin/TriCacheInstrument/: CMakeLists.txt  TriCacheInstrument.cpp  TriCacheInstrument.h
playground/: manual_parallel_sort.cpp  parallel_sort.cpp  spdk.cpp  test_instrument.cpp  test_instrument_mmap.cpp  test_libcache.cpp  test_memcpy.cpp
scripts/: build.sh  build_flashgraph.sh  build_ligra.sh  build_livegraph.sh  build_rocksdb.sh  build_terasort_spark.sh  cgroups.sh  config.sh  convert_to_flashgraph.sh  convert_to_ligra.sh  install_4.14_kernel.sh  kexec.sh  livegraph_cp_dataset_cache.sh  livegraph_cp_dataset_mmap.sh  livegraph_exec_cache.sh  livegraph_exec_mmap.sh  load_to_flashgraph.sh  mkraid.sh  mkswap.sh  mkxfs.sh  plot_all.sh  prepare_fastmap.sh  reset_spdk.sh  rmraid.sh  rmswap.sh  rmxfs.sh  run_all.sh  run_all_small.sh  run_breakdown.sh  run_flashgraph.sh  run_flashgraph_small.sh  run_graph_processing.sh  run_ligra_breakdown.sh  run_ligra_cache.sh  run_ligra_cache_small.sh  run_ligra_swap.sh  run_ligra_swap_slow.sh  run_ligra_swap_small.sh  run_livegraph.sh  run_livegraph_cache.sh  (+28 more)
